fixed overlap on icons

--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@ body {
 
 .links-container {
     max-width:calc(28vw + 80px);
-    padding-top: 10px;
+    padding-top: 35px;
 }
 
 a.link-outer {
